--- a/main.kv
+++ b/main.kv
@@ -6,19 +6,24 @@ MDScreenManager:
     name: 'first'
     MDFloatLayout:
         orientation: 'vertical'
+        MDLabel:
+            text: "Podaj grupę dziekańską"
+            halign: "center"
+            pos_hint: {"center_x": .5, "center_y": .6}
         MDTextField:
+            id: group_input
             mode: "rectangle"
             size_hint_x: None
             width: "240dp"
             pos_hint: {"center_x": .5, "center_y": .5}
-            hint_text: "Podaj grupę dziekańską"
+            hint_text: "Np. 1A"
         MDRoundFlatButton:
             text: "Submit"
             size_hint_x: None
             width: "240dp"
             pos_hint: {"center_x": .5, "center_y": .4}
             on_release:
-                app.root.current = 'main'  # Zmiana ekranu na MainPage
+                root.check_and_proceed()  # Zmiana ekranu na MainPage
 
 <MainPage>:
     name: 'main'
