--- a/main.kv
+++ b/main.kv
@@ -50,5 +50,13 @@ MDScreenManager:
             title: "ePlan PG ETI"
             anchor_title: "left"
             right_action_items: [["pencil", lambda x: app.root.get_screen('main').go_to_first_page()]]
-        MDBoxLayout:
-        MDBoxLayout:
+        ScrollView:
+            MDGridLayout:
+                cols: 1
+                spacing: "50dp"
+                padding: "50dp"
+                adaptive_height: True
+                MDBoxLayout:
+                    id: calendar_box  # Kalendarz zostanie dodany tutaj
+                    orientation: 'vertical'
+                MDBoxLayout:
