Added color palette

--- a/main.kv
+++ b/main.kv
@@ -59,4 +59,5 @@ MDScreenManager:
                 MDBoxLayout:
                     id: calendar_box  # Kalendarz zostanie dodany tutaj
                     orientation: 'vertical'
+                    adaptive_height: True
                 MDBoxLayout:
