Fixed calendar bugs

--- a/main.kv
+++ b/main.kv
@@ -45,7 +45,7 @@ MDScreenManager:
     name: 'main'
     MDBoxLayout:
         orientation: 'vertical'
-        MDTopAppBar:
+        MDTopAppBar:            
             id: group_app_bar
             title: "ePlan PG ETI"
             anchor_title: "left"
@@ -57,7 +57,13 @@ MDScreenManager:
                 padding: "50dp"
                 adaptive_height: True
                 MDBoxLayout:
-                    id: calendar_box  # Kalendarz zostanie dodany tutaj
+                    id: calendar_box
                     orientation: 'vertical'
+                    spacing: "10dp"
+                    padding: "10dp"
                     adaptive_height: True
                 MDBoxLayout:
+                    orientation: 'vertical'
+                    spacing: "10dp"
+                    padding: "10dp"
+                    adaptive_height: True
