modification of the calendar function

--- a/main.kv
+++ b/main.kv
@@ -63,6 +63,7 @@ MDScreenManager:
                     padding: "10dp"
                     adaptive_height: True
                 MDBoxLayout:
+                    id: lessons_box
                     orientation: 'vertical'
                     spacing: "10dp"
                     padding: "10dp"
